[project]
name = "geo-pulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.2",
    "langchain-openai>=1.1.6",
    "langchain-tavily>=0.2.15",
    "langgraph>=1.0.5",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.2",
    "tenacity>=9.1.2",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.8.4",
    "pre-commit>=4.5.1",
    "detect-secrets>=1.5.0",
    "bandit>=1.9.2",
    "safety>=3.7.0",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B112"]  # Skip try/except/continue warnings (intentional in our code)

[tool.ruff]
line-length = 120  # Increased for long prompts and docstrings
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E402", "E501"]  # Allow imports after sys.path.insert, and long lines (prompts are naturally long)
